--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,33 @@
 <html>
 <head>
   	<title><%= title%></title>
+  	
   <%= stylesheet_link_tag    "blueprint/screen", :media => "screen" %>
   <%= stylesheet_link_tag    "blueprint/print", :media => "print" %>
+  <!--[if lt IE 9]>
+	<%= stylesheet_link_tag    "blueprint/ie" %>
+<![endif]-->
+  <%= stylesheet_link_tag    "blueprint/custom", :media => "screen" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+  <div class="container">
+  	<header>
+  		<%= image_tag("logo.png", :alt => "Sample App", :class => "round")%>
+  		<nav class="round">
+  			<ul>
+  				<li><%= link_to "Home", '#' %></li>
+  				<li><%= link_to "Help", '#' %></li>
+  				<li><%= link_to "Sign In", '#' %></li>
+  			</ul>
+  			
+  		</nav>
+  	</header>	
+  	<section class="round">
+  			<%= yield %>		
+  	 </section>
+</div>
 
 </body>
 </html>
