--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,30 +5,16 @@
   	
   <%= stylesheet_link_tag    "blueprint/screen", :media => "screen" %>
   <%= stylesheet_link_tag    "blueprint/print", :media => "print" %>
-  <!--[if lt IE 9]>
-	<%= stylesheet_link_tag    "blueprint/ie" %>
-<![endif]-->
-  <%= stylesheet_link_tag    "blueprint/custom", :media => "screen" %>
+  <%= stylesheet_link_tag    "custom", :media => "screen" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <%= render 'layouts/shim' %>
 </head>
-<body>
-  <div class="container">
-  	<header>
-  		<%= image_tag("logo.png", :alt => "Sample App", :class => "round")%>
-  		<nav class="round">
-  			<ul>
-  				<li><%= link_to "Home", '#' %></li>
-  				<li><%= link_to "Help", '#' %></li>
-  				<li><%= link_to "Sign In", '#' %></li>
-  			</ul>
-  			
-  		</nav>
-  	</header>	
-  	<section class="round">
-  			<%= yield %>		
-  	 </section>
-</div>
-
-</body>
+	<body>
+		<%= render 'layouts/header' %>
+		<div class="container">
+			<%= yield %>
+			<%= render 'layouts/footer' %>
+		</div>
+	</body>
 </html>
