--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
-<%= link_to "Sign Up Now", '#', :class => "btn btn-large btn-primary" %>
+<%= link_to "Sign Up Now", signup_path, :class => "btn btn-large btn-primary" %>
