--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -81,3 +81,45 @@ footer ul li {
 float: left;
 margin-left: 10px;
 }
+
+
+/* DEBUGGING */
+$grayMediumLight: #eaeaea;
+
+@mixin box_sizing {
+-moz-box-sizing: border-box;
+-webkit-box-sizing: border-box;
+box-sizing: border-box;
+}
+
+
+.debug dump {
+clear: both;
+float: left;
+width: 100%;
+margin-top: 45px;
+@include box_sizing;
+}
+
+/* FORMS *?
+/* forms */
+input, textarea, select, .uneditable-input {
+border: 1px solid #bbb;
+width: 100%;
+padding: 10px;
+height: auto;
+margin-bottom: 15px;
+@include box_sizing;
+}
+
+#error explanation {
+color: #f00;
+ul {
+list-style: none;
+margin: 0 0 18px 0;
+}
+}
+.field_with_errors {
+@extend .control-group;
+@extend .error;
+}
